--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,23 +7,23 @@
   "theme_color": "#FFFFFF",
   "start_url": "index.html",
   "icons": [{
-    "src": "images/app-icon-32.png",
+    "src": "images/hands-32.png",
       "type": "image/png",
       "sizes": "32x32"
     }, {
-      "src": "images/app-icon-48.png",
+      "src": "images/hands-48.png",
       "type": "image/png",
       "sizes": "48x48"
     }, {
-      "src": "images/app-icon-128.png",
+      "src": "images/hands-128.png",
       "type": "image/png",
       "sizes": "128x128"
     }, {
-      "src": "images/app-icon-144.png",
+      "src": "images/hands-144.png",
       "type": "image/png",
       "sizes": "144x144"
     }, {
-      "src": "images/app-icon-192.png",
+      "src": "images/hands-192.png",
       "type": "image/png",
       "sizes": "192x192"
   }]
