--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "webpack-cli": "^4.9.1",
     "webpack-dashboard": "^3.3.6",
     "webpack-dev-server": "^4.7.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
     "fft-js": "^0.0.12"
