--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,19 +7,19 @@
   "theme_color": "#FFFFFF",
   "start_url": "index.html",
   "icons": [{
-    "src": "images/hands-32.png",
+    "src": "static/images/hands-32.png",
       "type": "image/png",
       "sizes": "32x32"
     }, {
-      "src": "images/hands-48.png",
+      "src": "static/images/hands-48.png",
       "type": "image/png",
       "sizes": "48x48"
     }, {
-      "src": "images/hands-128.png",
+      "src": "static/images/hands-128.png",
       "type": "image/png",
       "sizes": "128x128"
     }, {
-      "src": "images/hands-144.png",
+      "src": "static/images/hands-144.png",
       "type": "image/png",
       "sizes": "144x144"
     }, {
