--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
-    "fft-js": "^0.0.12"
+    "fft-js": "^0.0.12",
+    "file-loader": "^6.2.0"
   }
 }
